--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-icons": "^5.5.0"
+		"react-icons": "^5.5.0",
+		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
